--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,43 +1,74 @@
-*{
+* {
     font-family: sans-serif;
     margin: 0;
     padding: 0;
 }
 
-li{
+ul{
+    text-decoration: none;
+}
+
+li {
     list-style: none;
 }
 
-.wrapper{
+a {
+    color: #000000;
+}
+
+.wrapper {
     display: grid;
-
-    grid-template-areas:
-    "header header"
-    "sidebar content";
-
-    grid-auto-rows: 30px 1fr;
+    grid-template-areas: "header header" "sidebar content";
+    grid-auto-rows: 1fr 5fr;
     grid-template-columns: 2fr 10fr;
-
     grid-gap: 5px;
-
     color: #ffffff;
 }
 
-.header{
+.header {
     grid-area: header;
     border: 2px solid #000;
+    padding: 15px;
 }
 
-.sidebar{
+.logo{
+    max-width: 100px;
+}
+
+.sidebar {
     grid-area: sidebar;
     border: 2px solid #000;
 }
 
-.sidebar ul li{
+.sidebar ul li {
     padding: 10px 20px;
 }
 
-.content{
+.content {
+    display: grid;
     grid-area: content;
+    grid-template-areas: "content_bg" "personal_data" "my_posts";
+    grid-template-columns: 1fr;
+    grid-template-rows: 3fr 3fr 3fr;
+    grid-gap: 10px;
     border: 2px solid #000;
+    padding: 15px;
+}
+
+.content_bg{
+    max-width: 450px;
+    grid-area: content_bg;
+    background-color: #80e368;
+    align-self: center;
+    justify-self: center;
+}
+
+.personal_data{
+    grid-area: personal_data;
+    background-color: #61e3a3;
+}
+
+.my_posts{
+    grid-area: my_posts;
+    background-color: #bd7ee3;
 }
