--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,8 +1,8 @@
 .sidebar {
     grid-area: sidebar;
-    border: 2px solid #000;
+    border: 1.5px solid #000;
 }
 
-.sidebar ul li {
+.item {
     padding: 10px 20px;
 }
