--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 1.5fr 10fr;
     grid-gap: 10px;
+    margin-bottom: 15px;
 }
 
 .item .avatar{
@@ -11,5 +12,7 @@
 
 .item .text{
     font-size: 16px;
+    border: 1.5px solid #000;
+    padding: 15px;
     color: #000000;
 }
