--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -14,3 +14,25 @@
     border: 1.5px solid #000;
     padding: 15px;
 }
+
+.add{
+    display: grid;
+    grid-template-columns: 10fr 2fr;
+    grid-gap: 10px;
+}
+
+textarea{
+    border: 1.5px solid #000000;
+    resize: none;
+    padding: 10px;
+}
+
+.btn{
+    border: 1.5px solid #000000;
+    background-color: #eee;
+    line-height: 52px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #000000;
+    cursor: pointer;
+}
