--- a/src/components/App.css
+++ b/src/components/App.css
@@ -26,9 +26,19 @@ a {
 
 
 .content{
+    position: relative;
     border: 1.5px solid #000;
     padding: 15px;
     color: #000;
+}
+
+.preloader {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%);
 }
 
 /*несколько классов в React*/
