--- a/src/components/App.css
+++ b/src/components/App.css
@@ -38,7 +38,7 @@ a {
     height: 200px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%);
+    transform: translateY(-50%) translateX(-50%);
 }
 
 /*несколько классов в React*/
