--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,20 +1,9 @@
 .profile_info {
-    display: grid;
-    grid-area: profile_info;
-    grid-template-areas: "content_bg" "personal_data";
-    grid-template-rows: 2fr 2fr;
-    grid-gap: 10px;
+    display: flex;
 }
 
-.content_bg {
+.content_photo {
+    display: block;
     max-width: 450px;
-    grid-area: content_bg;
     background-color: #80e368;
-    align-self: center;
-    justify-self: center;
-}
-
-.personal_data {
-    grid-area: personal_data;
-    background-color: #61e3a3;
 }
