--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,3 +7,10 @@
 .logo{
     max-width: 100px;
 }
+
+.login {
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #000000;
+    float: right;
+}
