--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,9 +1,29 @@
 .profile_info {
     display: flex;
+    align-items: flex-start;
 }
 
 .content_photo {
     display: block;
-    max-width: 450px;
+    max-width: 150px;
+    margin-right: 20px;
     background-color: #80e368;
+}
+
+.content_info {
+    display: block;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.content_info div {
+    margin-bottom: 10px;
+}
+
+.content_info:last-child {
+    margin-bottom: 0;
+}
+
+.content_info span{
+    font-weight: normal;
 }
