--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,6 @@
 * {
     font-family: sans-serif;
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -25,7 +26,7 @@ a {
 }
 
 
-.content{
+.content {
     position: relative;
     border: 1.5px solid #000;
     padding: 15px;
