--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -16,21 +16,24 @@
 }
 
 .add{
-    display: grid;
-    grid-template-columns: 10fr 2fr;
-    grid-gap: 10px;
+    display: flex;
 }
 
-textarea{
+
+.dialogInput {
+    width: 100%;
+    height: 55px;
     border: 1.5px solid #000000;
     resize: none;
     padding: 10px;
 }
 
-.btn{
+.btn {
+    flex: 1;
+    height: 55px;
+    padding: 10px;
     border: 1.5px solid #000000;
     background-color: #eee;
-    line-height: 52px;
     text-align: center;
     text-transform: uppercase;
     color: #000000;
