--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,26 +1,24 @@
-.my_posts{
-    border: 1.5px solid #000;
-    padding: 25px;
-}
-
-.add{
-    display: grid;
-    grid-template-columns: 10fr 2fr;
-    grid-gap: 10px;
-    margin-bottom: 15px;
-}
-
-textarea{
-    height: 35px;
-    line-height: 35px;
+.postInput {
+    width: 100%;
+    height: 55px;
     border: 1.5px solid #000000;
     resize: none;
     padding: 10px;
 }
 
-.btn{
-    height: 35px;
-    line-height: 35px;
+.my_posts {
+    border: 1.5px solid #000;
+    padding: 25px;
+}
+
+.add {
+    display: flex;
+    margin-bottom: 15px;
+}
+
+.btn {
+    flex: 1;
+    height: 55px;
     padding: 10px;
     border: 1.5px solid #000000;
     background-color: #eee;
