--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -2,8 +2,9 @@
     margin-bottom: 20px;
 }
 
-.inputWrapp {
-    margin-bottom: 20px;
+.inputWrapp,
+.error{
+    margin-bottom: 10px;
 }
 
 .inputWrapp:last-child {
@@ -23,4 +24,8 @@
     padding: 0;
     background-color: #fff;
     color: #000000;
+}
+
+.error {
+    color: red;
 }
