90. redux-ducks refactoring

--- a/src/components/Common/FormControl.module.css
+++ b/src/components/Common/FormControl.module.css
@@ -8,7 +8,15 @@
     margin-top: 5px;
 }
 
-.inputWrapp.error textarea ,
+.inputWrapp.error textarea,
 .inputWrapp.error input {
     border: 1.5px solid red;
+}
+
+.inputWrapp {
+    margin-bottom: 10px;
+}
+
+.inputWrapp:last-child {
+    margin-bottom: 0;
 }
