--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -2,23 +2,21 @@
     margin-bottom: 20px;
 }
 
-.inputWrapp,
-.error{
-    margin-bottom: 10px;
-}
-
-.inputWrapp:last-child {
-    margin-bottom: 0;
-}
-
 .loginForm input,
-.loginForm button{
+.loginForm button {
     display: block;
+    max-width: 200px;
+    width: 200px;
     padding: 10px;
     border: 1.5px solid #000;
 }
 
-.loginForm  button {
+.loginForm input[type=checkbox] {
+    max-width: none;
+    width: auto;
+}
+
+.loginForm button {
     width: 130px;
     height: 35px;
     padding: 0;
@@ -28,4 +26,5 @@
 
 .error {
     color: red;
+    margin-bottom: 10px;
 }
